Fixed Level 3 layout on mobile

--- a/src/components/LevelThreeQualifications/LevelThreeQualifications.css
+++ b/src/components/LevelThreeQualifications/LevelThreeQualifications.css
@@ -67,5 +67,15 @@
 
 @media only screen and (max-width: 600px) {.mobiletextbox{
     margin-left: 0%;
-  }}
+  }
+  .form-background h3
+{
+    margin-left: 0px;
+}
+  .form-background h5
+  {
+      margin-top: 15px;
+      margin-left: 0px;
+  }
+}
   
